Fix jobs list collapsing horizontally when no results

--- a/client/style.css
+++ b/client/style.css
@@ -295,7 +295,7 @@ select {
 }
 
 @media (max-width: 1000px) {
-  #content {
+  #content, #content > * {
     display: block;
   }
 
